--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -246,7 +246,7 @@ NYU:
     ScopusCitations:
       type: Scopus2
       priority: c
-      api_key: <%= ENV['SCOPUS_API_KEY'] %>
+      api_key: <%= (ENV['SCOPUS_API_KEY'] || SCOPUS_API_KEY) %>
     # NYU_RefWorks:
     #   name: RefWorks
     #   type: OpenURLService
@@ -369,9 +369,9 @@ CU:
       extra_targets_of_interest:
           CAPTURE_CITATION: export_citation
     ScopusCitations:
-      type: Scopus
+      type: Scopus2
       priority: c
-      api_key: <%= ENV['SCOPUS_API_KEY'] %>
+      api_key: <%= (ENV['SCOPUS_API_KEY'] || SCOPUS_API_KEY) %>
 
 NS:
   name: New School Libraries
