--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -2,7 +2,7 @@
 rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
 rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
 std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} --tags ~@wip -r features"
-std_opts << " --tags ~@wip-travis" if ENV['TRAVIS']
+std_opts << " --tags ~@wip-ci" if ENV['TRAVIS'] || ENV['CIRCLECI']
 %>
 default: <%= std_opts %> features
 wip: --tags @wip:3 --wip features
