Only add stackmap css if the insitution supports it and move institution specific stackmap css to the umlaut_services config

--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -397,6 +397,7 @@ NS:
     gauges_tracking_code: <%= ENV['NS_GAUGES_TRACKING_CODE'] %>
     css: search_ns
     resolve_css: resolve_ns
+    stackmap_css: stackmap.com/integration/newschool/StackMap.css
     sfx_base_url: http://sfx4.library.newschool.edu/ns?
     wayfinder_attributes:
         primo:
