Cache bundler for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ env:
 services:
   - memcached
 
+cache: bundler
+
 before_script:
   - mysql -e 'create database getit_test;'
   - RAILS_ENV=test bundle exec rake db:schema:load
@@ -27,9 +29,6 @@ before_script:
 script: "RAILS_ENV=test bundle exec rake"
 
 rvm:
-  # - jruby-19mode # JRuby (1.9)
-  # - rbx-19mode
-  # - 2.1.9
   - 2.2.5
   - 2.3.1
 
