--- a/circle.yml
+++ b/circle.yml
@@ -22,3 +22,9 @@ database:
   override:
     - mysql -e 'create database getit_test;'
     - bundle exec rake db:create db:schema:load
+
+test:
+  override:
+    - RAILS_ENV=test bundle exec rake test
+    - RAILS_ENV=test bundle exec rake spec
+    - RAILS_ENV=test bundle exec rake cucumber
