--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ app:
     CI:
     CODECLIMATE_REPO_TOKEN:
     COVERALLS_REPO_TOKEN:
-  # entrypoint: "tail -f /dev/null"
+  entrypoint: "tail -f /dev/null"
 db:
   image: library/mysql:5.6.22
   expose:
