--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,43 @@
 version: '3'
 services:
+
   app:
     build: .
-    ports:
-      - "3000:3000"
     volumes:
       - .:/app
-    links:
-      - db
-    environment:
-      GETIT_DB_HOST: db
-      ILL_PATRON_STATUSES: '[51,37,55,31]'
-      ALEPH_BASE_URL: http://aleph.library.edu
-      ALEPH_REST_URL: http://aleph.library.edu:1891/rest-dlf
-      PRIMO_BASE_URL: http://primo.library.edu
-      LOGIN_URL: https://dev.login.library.nyu.edu
-      PASSIVE_LOGIN_PATH: /login/passive
-      SSO_LOGOUT_PATH: /logout
-      NS_BX_TOKEN: NS_BX_TOKEN
-      EZBORROW_NYU_LIBRARY_SYMBOL: NYU
-      EZBORROW_NYU_PATRON_BARCODE: '12345'
-      EZBORROW_NS_PATRON_BARCODE: '12345'
-      EZBORROW_NS_LIBRARY_SYMBOL: NEWSCHOOL
-      CI:
-      CODECLIMATE_REPO_TOKEN:
-      COVERALLS_REPO_TOKEN:
-    entrypoint: "tail -f /dev/null"
+    ports:
+      - "3000:3000"
+    env_file:
+      - test.env
+    command: "tail -f /dev/null"
     depends_on:
-      - setup_tests
+      - setup_dbs
+
   db:
     image: library/mysql:5.6.22
     expose:
       - "3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-  setup_tests:
+
+  test:
     build: .
-    command: rake db:setup
+    volumes:
+      - .:/app
+    environment:
+      RAILS_ENV: test
+    env_file:
+      - test.env
+    command: "tail -f /dev/null"
+    depends_on:
+      - setup_dbs
+
+  setup_dbs:
+    build: .
     volumes:
       - .:/app
     environment:
       GETIT_DB_HOST: db
-    links:
-      - db
+    command: bash -c "sleep 5; rake db:setup"
     depends_on:
       - db
