Ignore specific branches in circle

--- a/circle.yml
+++ b/circle.yml
@@ -39,10 +39,11 @@ deployment:
     commands:
       - curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20QA%20Deploy/build/api
   development:
-    branch: /.+/
-      # ignore:
-      #   - master
-      #   - qa
+    # branch: /.+/
+    branches:
+      ignore:
+        - master
+        - qa
     # owner: NYULibraries
     commands:
       - curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Development%20Deploy/build/api
