Preempt Ulrichs and Elsevier cover search by an existing cover

--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -114,10 +114,14 @@ default:
     ElsevierCover:
       type: ElsevierCover
       priority: b
+      preempted_by:
+        existing_type: cover_image
 
     UlrichsCover:
       type: UlrichsCover
       priority: b
+      preempted_by:
+        existing_type: cover_image
 
     # Priority c: Background
     # Web of Knowledge API has no api key, but your
