--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -235,13 +235,13 @@ NYU:
         # REFWORKS_EXPORT_TOOL: export_citation
         ASK_A_LIBRARIAN_LCL: help
         COMMENTS_ABOUT_BOBCAT_LCL: help
-    NYUUlrichsLink:
-      type: UlrichsLink
-      display_name: Ulrich's Directory
-      link_name: Periodical Information
-      priority: c
-      status: active
-      base_url: <%= (ENV['NYU_ULRICHS_LINK_BASE_URL'] || 'NYU_ULRICHS_LINK_BASE_URL') %>
+    # NYUUlrichsLink:
+    #   type: UlrichsLink
+    #   display_name: Ulrich's Directory
+    #   link_name: Periodical Information
+    #   priority: c
+    #   status: active
+    #   base_url: <%= (ENV['NYU_ULRICHS_LINK_BASE_URL'] || 'NYU_ULRICHS_LINK_BASE_URL') %>
     ScopusCitations:
       type: Scopus2
       priority: c
