--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -52,6 +52,25 @@ default:
         - fulltext
         - table_of_contents
         - referent_enhance
+        
+      NS_Primo:
+      service_id: NS_Primo
+      type: PrimoService
+      priority: 2
+      base_url: "<%= Exlibris::Primo.config.base_url %>"
+      vid: NS
+      institution: NS
+      holding_search_institution: NS
+      holding_search_text: Search for this title in BobCat.
+      suppress_holdings: [ !ruby/regexp '/\$\$LBWEB/', !ruby/regexp '/\$\$LNWEB/', !ruby/regexp '/\$\$LTWEB/', !ruby/regexp '/\$\$LSWEB/', !ruby/regexp '/\$\$LWEB/', !ruby/regexp '/\$\$ONSMARCIT/', !ruby/regexp '/\$\$Onyumarcit/', !ruby/regexp '/\$\$1Restricted Internet Resources/' ]
+      suppress_urls: [ !ruby/regexp '/getit\.library\.nyu\.edu/', !ruby/regexp '/www\.loc\.gov\/catdir\/toc/']
+      ez_proxy: !ruby/regexp '/https\:\/\/(ez)?proxy\.library\.nyu\.edu\/login\?url=/'
+      service_types:
+        - primo_source
+        - holding_search
+        - fulltext
+        - table_of_contents
+        - referent_enhance
 
     # Priority 3
     # Blind link to price comparison site AllBooks.com.
