--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -71,13 +71,15 @@ default:
         -
           name: primo
           regex: !ruby/regexp '/info:sid\/primo\.exlibrisgroup\.com:primo-(.+)/'
-          base_url: http://library.nyu.edu/persistent/lcn/
-          display_text: Back to results
+          base_url: http://bobcat.library.nyu.edu
+          display_text: Back to search
+          return_to_base_url: true
         -
           name: umlaut
           regex: !ruby/regexp '/info:sid\/sfxit\.com:citation/'
           base_url: https://getit.library.nyu.edu
-          display_text: Back to e-journal search
+          display_text: Back to search
+          return_to_base_url: true
         -
           name: worldcat1
           regex: !ruby/regexp '/info:sid\/firstsearch\.oclc\.org:WorldCat/'
