Adding back a dummy HSL view institution that inherits from NYU default so that users in the HSL IP range can still use GetIt; the reason this is necessary is because of issue #7

--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -426,3 +426,10 @@ NYSID:
     gauges_tracking_code: <%= ENV['NYSID_GAUGES_TRACKING_CODE'] %>
     css: search_nysid
     resolve_css: resolve_nysid
+
+HSL:
+  parent_code: NYU
+  views:
+    gauges_tracking_code: <%= ENV['NYU_GAUGES_TRACKING_CODE'] %>
+    css: search
+    resolve_css: resolve
