--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     command: "tail -f /dev/null"
     depends_on:
       - setup_dbs
-      - phantomjs
+      # - phantomjs
 
   setup_dbs:
     build: .
