--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run:
           name: Start container and run tests
           command: |
-            docker-compose run test rake
+            docker-compose run --service-ports test rake
 
       - deploy:
           name: Deploy
