--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,16 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
 
+      # - run:
+      #     name: Start container and run tests
+      #     command: |
+      #       docker-compose run test rake
+
       - run:
-          name: Start container and run tests
+          name: Start container and verify it's working
           command: |
-            docker-compose run --service-ports test rake
+            set -x
+            docker-compose up -d
 
       - deploy:
           name: Deploy
